--- a/app/src/main/res/layout/fragment_pairs.xml
+++ b/app/src/main/res/layout/fragment_pairs.xml
@@ -33,7 +33,7 @@
 	<FrameLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:background="@color/colorPrimaryDark"
+		android:background="@color/colorBackground"
 		>
 
 		<androidx.recyclerview.widget.RecyclerView android:id="@+id/rvPairList"
