--- a/app/src/main/res/drawable/fragment_chat_message_left.xml
+++ b/app/src/main/res/drawable/fragment_chat_message_left.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Created by Andrii Kovalchuk
-  ~ Copyright (C) 2020. roove
+  ~ Copyright (C) 2021. roove
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU General Public License as published by
@@ -19,6 +19,6 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
 	android:shape="rectangle">
-	<solid android:color="@color/colorAccentDark" />
+	<solid android:color="?colorPrimaryDark" />
 	<corners android:bottomLeftRadius="0dp" android:radius="20dp" />
 </shape>
