--- a/app/src/main/res/layout/btm_sheet_settings_preferences.xml
+++ b/app/src/main/res/layout/btm_sheet_settings_preferences.xml
@@ -24,7 +24,7 @@
 	
 	<LinearLayout
 		android:id="@+id/containerModalBottomSheet"
-		android:background="@color/colorPrimaryDark"
+		android:background="@color/colorBackground"
 		android:layout_height="wrap_content"
 		android:layout_width="match_parent"
 		android:orientation="vertical"
@@ -34,6 +34,7 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_marginTop="8dp"
+			android:layout_marginHorizontal="8dp"
 			android:labelFor="@id/rangeSeekBarAgePicker"
 			android:padding="8dp"
 	
@@ -49,7 +50,6 @@
 	
 			app:cardCornerRadius="16dp"
 			app:contentPadding="16dp"
-			app:cardElevation="0dp"
 			
 			>
 			
@@ -63,13 +63,12 @@
 				android:stepSize="1"
 				
 				app:trackColorActive="?colorSecondary"
-				app:trackColorInactive="@color/lolite_25"
-				app:haloColor="?colorSecondary"
 				
-				app:thumbColor="@color/white"
+				app:thumbColor="?colorSecondary"
 				app:thumbRadius="16dp"
 				
 				/>
+			
 		</com.google.android.material.card.MaterialCardView>
 	
 		<com.google.android.material.textview.MaterialTextView
@@ -77,6 +76,7 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_marginTop="8dp"
+			android:layout_marginHorizontal="8dp"
 			android:labelFor="@id/toggleButtonPickerPreferredGender"
 			android:padding="8dp"
 	
@@ -106,9 +106,6 @@
 	
 				android:text="@string/preferredGenderMale"
 				android:textAllCaps="false"
-				android:textColor="@color/white_tint_color"
-	
-				app:backgroundTint="@color/lolite_checked_tint"
 	
 				style="@style/Widget.MaterialComponents.Button.OutlinedButton"
 				/>
@@ -122,9 +119,6 @@
 	
 				android:text="@string/preferredGenderFemale"
 				android:textAllCaps="false"
-				android:textColor="@color/white_tint_color"
-	
-				app:backgroundTint="@color/lolite_checked_tint"
 	
 				style="@style/Widget.MaterialComponents.Button.OutlinedButton"
 				/>
