--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -26,7 +26,7 @@
 		android:id="@+id/containerRegistration"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:background="@color/colorPrimaryDark"
+		android:background="@color/colorBackground"
 		android:padding="8dp"
 		
 		app:layoutDescription="@xml/motion_registration_scene"
