--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,10 +21,10 @@
 	
 	<!-- Base application theme. -->
 	<style name="AppTheme" parent="Theme.MaterialComponents.NoActionBar">
-		<!-- BASE THEME COLOR your theme here. -->
+		
 		<item name="colorPrimary">@color/colorPrimary</item>
-		<item name="colorPrimaryDark">@color/colorPrimaryDark</item>
 		<item name="colorPrimaryVariant">@color/colorPrimaryLight</item>
+		<item name="colorPrimaryDark">@color/colorPrimaryDark</item>
 		<item name="colorOnPrimary">@color/colorOnPrimary</item>
 		
 		<item name="colorSecondary">@color/colorSecondary</item>
@@ -37,8 +37,8 @@
 		<item name="colorSurface">@color/colorSurface</item>
 		<item name="colorOnSurface">@color/colorOnSurface</item>
 		
-		<item name="android:colorBackground">@color/black</item>
-		<item name="colorOnBackground">@color/white</item>
+		<item name="android:colorBackground">@color/colorBackground</item>
+		<item name="colorOnBackground">@color/colorOnBackground</item>
 		
 		<item name="android:textColor">@color/white</item>
 		
