--- a/app/src/main/res/layout/fragment_cards.xml
+++ b/app/src/main/res/layout/fragment_cards.xml
@@ -74,38 +74,6 @@
 			
 			/>
 		
-		
-		
-		<com.mmdev.roove.ui.common.custom.components.LoadingView android:id="@+id/loadingView"
-			android:layout_width="120dp"
-			android:layout_height="120dp"
-			
-			android:visibility="invisible"
-			
-			app:layout_constraintVertical_bias="0.6"
-			app:layout_constraintTop_toTopOf="parent"
-			app:layout_constraintBottom_toTopOf="@id/tvCardHelperText"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintStart_toStartOf="parent"
-			
-			android:contentDescription="@null"
-			/>
-		
-		<com.google.android.material.textview.MaterialTextView android:id="@+id/tvCardHelperText"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:gravity="center"
-			
-			android:text="@string/fragment_cards_explanation_text"
-			android:visibility="invisible"
-			
-			app:layout_constraintTop_toBottomOf="@id/loadingView"
-			app:layout_constraintBottom_toBottomOf="parent"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintStart_toStartOf="parent"
-			/>
-		
-		
 		<ImageView android:id="@+id/ivCardSkipIndicator"
 			android:layout_width="0dp"
 			android:layout_height="0dp"
@@ -144,6 +112,36 @@
 			app:layout_constraintStart_toStartOf="@id/topCard"
 			
 			android:contentDescription="@string/fragment_card_like_img_description"
+			/>
+		
+		<com.mmdev.roove.ui.common.custom.components.LoadingView android:id="@+id/loadingView"
+			android:layout_width="120dp"
+			android:layout_height="120dp"
+			
+			android:visibility="invisible"
+			
+			app:layout_constraintVertical_bias="0.6"
+			app:layout_constraintTop_toTopOf="parent"
+			app:layout_constraintBottom_toTopOf="@id/tvCardHelperText"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			
+			android:contentDescription="@null"
+			/>
+		
+		<com.google.android.material.textview.MaterialTextView android:id="@+id/tvCardHelperText"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:gravity="center"
+			
+			android:text="@string/fragment_cards_explanation_text"
+			android:textAppearance="?textAppearanceHeadline5"
+			android:visibility="invisible"
+			
+			app:layout_constraintTop_toBottomOf="@id/loadingView"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
 			/>
 		
 	</androidx.constraintlayout.motion.widget.MotionLayout>
