--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -100,20 +100,18 @@
 
 	
 
-	<style name="MyMaterialAlertDialog.ButtonPositive" parent="Widget.MaterialComponents.Button.UnelevatedButton">
+	<style name="MyConfirmationAlertDialog.ButtonPositive" parent="Widget.MaterialComponents.Button.UnelevatedButton">
 		<item name="backgroundTint">@color/material_red_a700</item>
 		<item name="android:textColor">@color/white</item>
 		<item name="android:textAllCaps">false</item>
-		<item name="android:textSize">14sp</item>
-		<item name="rippleColor">@color/black_50</item>
+		<item name="rippleColor">@color/material_red_a700</item>
 	</style>
 
-	<style name="MyMaterialAlertDialog.ButtonNegative" parent="Widget.MaterialComponents.Button.OutlinedButton">
+	<style name="MyConfirmationAlertDialog.ButtonNegative" parent="Widget.MaterialComponents.Button.OutlinedButton">
 		<item name="android:layout_marginEnd">8dp</item>
 		<item name="strokeColor">@color/material_blue_a700</item>
 		<item name="android:textColor">@color/white</item>
 		<item name="android:textAllCaps">false</item>
-		<item name="android:textSize">14sp</item>
 		<item name="rippleColor">@color/lolite</item>
 	</style>
 
