--- a/app/src/main/res/color/material_registration_buttons.xml
+++ b/app/src/main/res/color/material_registration_buttons.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Created by Andrii Kovalchuk
-  ~ Copyright (C) 2020. roove
+  ~ Copyright (C) 2021. roove
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU General Public License as published by
@@ -20,6 +20,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
 	<item android:color="@color/lolite" android:state_selected="true"/>
-	<item android:color="@color/colorPrimary"/>
+	<item android:color="?colorSurface"/>
 
 </selector>
